2005-10-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menustyle.c (menustyle_copy_face):
	(menustyle_copy):
	(menustyle_free_face):
	(menustyle_free):
	(menustyle_parse_style):
	use new functions and fix a bug

	* fvwm/Makefile.am:
	* fvwm/colors.c:
	* fvwm/colors.h:
	removed empty files colors.c and colors.h

	* fvwm/colors.c (CopyColor):
	(FreeColors):
	moved to libs/ColorUtils.c and renamed to fvwmlib_free_colors and
	fvwmlib_copy_color

	* fvwm/frame.c (frame_reshape_border):
	removed unused code

2005-10-23  Viktor Griph  <griph@dd.chalmers.se>

	* fvwm/menustyle.c (menustyle_copy_face):
	separated from menustyle_copy; color copies are reallocated.
	(menustyle_free):
	all colors freed
	(menustyle_copy):
	color copies are reallocated.

	* fvwm/colors.c (CopyColor):
	* fvwm/colors.h (CopyColor):
	added CopyColor

2005-10-20  Viktor Griph  <griph@dd.chalmers.se>

	* fvwm/move_resize.c (__resize_window):
	fix for not being able to finish resize with mouse when resizing on
	click with modifiers active. (intruduced with 'removed duplicate
	pointer query' at sep 29)

	* NEWS:
	* fvwm/fvwm.1.in:
	* fvwm/menustyle.c (menustyle_parse_style):
	made style pairs negatable with '!' prefix
	ActiveForeOff and HilightBackOff frees colors used.

	* fvwm/menustyle.c (menustyle_copy):
	fix for freeing color from sorce instead of destination.

2005-10-19  Viktor Griph  <griph@dd.chalmers.se>

	* fvwm/functions.c (__execute_function):
	fixed an error in yesterdays patch to complex fuctions. the commands
	pressed window were not retored correctly after running move functions
	without it, and functions would be run twice.

2005-10-18  Viktor Griph  <griph@dd.chalmers.se>

	* fvwm/fvwm.1.in:
	added NoLayer to list of allowed options for WindowList command
	fixed grammar of test-conditions list. formatting fixes for
	MoveToPage command. Added CirculateSkipIcon / CirculateHitIcon to
	style option list.

	* NEWS:
	* fvwm/functions.c (__execute_function)