@@ -1,3 +1,9 @@
+2005-10-27  Viktor Griph  <griph@dd.chalmers.se>
+
+	* fvwm/borders.c (border_draw_one_border_part): 
+	fix for the TiledPixmap borderstyle fix not to affect RootTransparent
+	borders.
+
 2005-10-25  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/menustyle.c (menustyle_copy_face):
